[package]
name = "ali_oss"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
sha-1 = "0.8.1"
md-5 = "0.8.0"
hmac-sha1 = "^0.1"
chrono = "0.4.9"
http = "0.1.19"
lazy_static = "1.4.0"
serde = "1.0.102"
serde_json = "1.0.41"
