[package]
name = "ali_oss"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10.7", features=["blocking"]}
sha-1 = "0.9.1"
md-5 = "0.9.1"
hmac-sha1 = "0.1.3"
chrono = "0.4.15"
http = "0.2.1"
lazy_static = "1.4.0"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
quick-xml = "0.18.1"
regex= "1.3.9"
